Subheader alignment fixed

--- a/app/assets/themes/default/stylesheets/style.css.scss
+++ b/app/assets/themes/default/stylesheets/style.css.scss
@@ -476,7 +476,7 @@ input[type=button][disabled="disabled"], input[type=submit][disabled="disabled"]
    color: #dfdfdf;
    background: url(../images/logo.png) no-repeat left center;
    width: 539px;
-   height: 56px;
+   height: 90px;
    font-size: 33px;
    display: block;
    padding: 36px 0 0 174px;
